--- a/www/stylesheets/style.css
+++ b/www/stylesheets/style.css
@@ -78,6 +78,12 @@ table.dataTable thead tr td p{
   .col-md-6{
       width: 50%;
   }
+  .col-md-7 {
+    width: 58.33333333%;
+  }
+  .col-md-5 {
+    width: 41.66666667%;
+  }
 }
 @media(max-width: 402px){
   .modal-dialog {
