Login almost done, customized intro.
Login missing the dynamic redirects from express, custom welcome and more sensitive information of the current page were implemented.

--- a/www/stylesheets/style.css
+++ b/www/stylesheets/style.css
@@ -61,7 +61,7 @@ body{
 .box__button {
   display: none;
 }
-input[type="text"]:not(.name), .form_nuevo_usuario input[type="password"], .form_nuevo_usuario input[type="number"] {
+input[type="text"]:not(.name):not(.input_text), .form_nuevo_usuario input[type="password"], .form_nuevo_usuario input[type="number"] {
   width: 220px;
   padding: 10px 8px;
   border: 1px solid #bbb;
